Incorporates naming and injection into the ACC; adds support for undeployed app clients and EARs; fixes small issues in client-side naming configurator and in AppClientArchivist
Tests: deployment devtests, QL tests; several ejb devtests at Ken's suggestion;

svn path=/trunk/; revision=25711


Former-commit-id: 50ed48f0c4eff7c4867cf022cfb8dfacf7f2ca00